# CALockBench

./: .benchmark.sh.swp  .dockerignore  .gitignore  .swp  CMakeLists.txt  Dockerfile  Figure_4.txt  Makefile  Makefile.in  README.md  Results.txt  STMBench  a.out  benchmark.sh  ca.txt  coarse.txt  containment.py  docker-compose.yml  dom.txt  gmon.out  graph.gv  graphImageGenerator.py  graphPlotGenerator.py  labellingTime.py  medium.txt  plotter  plotter.cpp  pom.xml  run_performance.sh  sb7_lock  script_baseline_ca.sh  script_baseline_coarse.sh  script_baseline_medium.sh  script_calock.sh  script_coarse.sh  script_domlock.sh  script_medium.sh  script_nolock.sh
Performance Tests/: CMakeLists.txt  ContainmentRatios.py  Makefile  Makefile.in  ReadPercentageplotter.cpp  VariableReadImageGenerator.py  a.out  benchmark.sh  graphImageGenerator.py  initialLabelling.py  labelsMemoryFootprint.py  plotter.cpp
Performance Tests/Charts/Grid5000 Latest/: #graphImageGenerator.py#  .#graphImageGenerator.py  graphImageGenerator.py
Performance Tests/Charts/Grid5000 Latest/benchmarkCharts/: BalancedWithModificationsIdleness.csv  BalancedWithModificationsRelabelling.csv  BalancedWithModificationsThroughput.csv  BalancedWithoutModificationsIdleness.csv  BalancedWithoutModificationsThroughput.csv  ReadWithModificationsIdleness.csv  ReadWithModificationsRelabelling.csv  ReadWithModificationsThroughput.csv  (+7 more)
Performance Tests/benchmarkCharts/: BalancedWithModificationsIdleness.csv  BalancedWithModificationsRelabelling.csv  BalancedWithModificationsThroughput.csv  BalancedWithoutModificationsIdleness.csv  BalancedWithoutModificationsRelabelling.csv  BalancedWithoutModificationsThroughput.csv  ContainmentRatio.csv  Depth_Plotter  Modification_Plotter.cpp  NodesLockedTree.py  Read.csv  ReadPercentageThroughput.csv  ReadWithModifications.csv  ReadWithModificationsIdleness.csv  ReadWithModificationsModifications.csv  ReadWithModificationsRelabelling.csv  ReadWithModificationsThroughput.csv  ReadWithoutModifications.csv  ReadWithoutModificationsIdleness.csv  ReadWithoutModificationsModifications.csv  ReadWithoutModificationsRelabeling.csv  ReadWithoutModificationsRelabelling.csv  ReadWithoutModificationsThroughput.csv  WriteWithModifications.csv  WriteWithModificationsIdleness.csv  WriteWithModificationsRelabelling.csv  WriteWithModificationsThroughput.csv  WriteWithoutModifications.csv  WriteWithoutModificationsIdleness.csv  WriteWithoutModificationsRelabelling.csv  WriteWithoutModificationsThroughput.csv
Performance Tests/benchmarkCharts/Hierarchical-locks-Tree/: ILscript_Depth.sh  ILscript_Modifications.sh  domscript_Modifications.sh
Performance Tests/benchmarkCharts/dataForPlots/: Skewness.csv
Performance Tests/scripts/: VariableReadPercentage.sh  balanced.sh  balancedModifications.sh  read.sh  readModifications.sh  script_calock.sh  script_calock_32Threads.sh  script_calock_spinning.sh  script_calock_spinning_32Threads.sh  script_coarse.sh  script_domlock.sh  script_domlock_32Threads.sh  script_domlock_spinning_32Threads.sh  script_lockProportions.sh  script_medium.sh  write.sh  writeModifications.sh
Performance Tests/src/: CArelabelling.cpp  CArelabelling.h  DomRelabelling.cpp  benchmark.cpp  coarsePool.h  containers.h  containmentBenchmarkTraversal.h  data_holder.cpp  dominatorHelper.h  id_pool.h  interval.h  labelAssignmentTest.cpp  labelAssignmentTraversal.cpp  labelAssignmentTraversal.h  lockPool.h  lscaHelpers.h  mediumPool.h  parameters.cpp  parameters.h  random.cpp  sb7_exception.h  sb7_lock.cpp
Performance Tests/src/operations/: operations.cpp  operations.h
Performance Tests/src/struct/: assembly.h  atomic_part.cpp  atomic_part.h  composite_part.cpp  composite_part.h  design_obj.h  document.cpp
Performance Tests/src/thread/: thread.h  thread_fun.cpp
StressTest/Hierarchical-locks-Graph/: CALockScript.sh  CALockScript_Bucket.sh  CALockScript_noBucket.sh  CALockScript_small.sh  CALockScript_small_Bucket.sh  CALockScript_small_noBucket.sh  CMakeLists.txt  ILscript _small.sh~  ILscript.sh  ILscript.sh~  ILscript_Bucket.sh  ILscript_noBucket.sh  ILscript_small.sh  ILscript_small.sh~  ILscript_small_Bucket.sh  ILscript_small_noBucket.sh  ParallelPthread.h~  README  Tree.h~  a.out  domscript _small.sh~  domscript.sh  domscript.sh~  domscript_Bucket.sh  domscript_noBucket.sh  domscript_small.sh  domscript_small_Bucket.sh  graphGenerator.py  interval.h~  main.cpp~  script.sh~
StressTest/Hierarchical-locks-Graph/.svn/: entries
StressTest/Hierarchical-locks-Graph/inputGraph/: GraphLarge.csv
StressTest/Hierarchical-locks-Graph/output/: 9-11Intention.txt~  CALock.txt  CALock_Bucket.txt  CALock_NoBucket.txt  DomLock.txt  DomLock.txt~  DomLock_NoBucket.txt  Intention.txt  Intention.txt~  Intention_NoBucket.txt
StressTest/Hierarchical-locks-Graph/src/: ParallelPthread.h  Tree.h  TreeNode  TreeNode.h  interval.h  intervalTree.h  lockPool.h  main.cpp
StressTest/Hierarchical-locks-Tree/: 9-11Intention.txt~  CALockScript_Bucket.sh  CALockScript_Depth.sh  CALockScript_Modifications.sh  CALockScript_noBucket.sh  CALockScript_small_Bucket.sh  CALockScript_small_noBucket.sh  CMakeLists.txt  ILscript_Bucket.sh  ILscript_Depth.sh  ILscript_noBucket.sh  ILscript_small_Bucket.sh  ILscript_small_noBucket.sh  ParallelPthread.h~  README  Tree.h~  TreeDataStructure.cpp~  TreeNode.h~  a.out  domscript_Bucket.sh  domscript_Depth.sh  domscript_noBucket.sh  domscript_small.sh  domscript_small_Bucket.sh  domscript_small_noBucket.sh  errorHandler.h~  interval.h~  lock.h~  main.cpp~  makefile~  out9-10.txt~  script.sh~  try.cpp~
StressTest/Hierarchical-locks-Tree/.svn/: entries
StressTest/Hierarchical-locks-Tree/output/: CALock.txt  CALock_Bucket.txt  CALock_Depth.txt  CALock_NoBucket.txt  DomLock.txt  DomLock.txt~  DomLock_Bucket.txt  DomLock_NoBucket.txt  Domlock_Depth.txt  Intention.txt  Intention_Bucket.txt  Intention_Depth.txt  Intention_NoBucket.txt
StressTest/Hierarchical-locks-Tree/src/: ParallelPthread.h  Tree.h  TreeNode.h  errorHandler.h  interval.h  intervalTree.h  lockPool.h  main.cpp
(+638 files in other folders)
